# SpaceMining

./: CMakeLists.txt  LICENSE  README.md
include/: spaceMining.h
src/: CMakeLists.txt  spaceMining.cpp
src/spaceMiningLib/: CMakeLists.txt  spaceMiningLib.cpp
test/: CMakeLists.txt  test.cpp
